Issue #435 - Update all docs to Web5 0.7.x

--- a/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -9,10 +9,13 @@ import TabItem from '@theme/TabItem';
 :::info
 <h2>Prerequisites</h2>
 <ul>
-<li>
-  <p>Ensure you have <a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" 
-  target="_blank">Node Package Manager</a>, <code>npm</code>, installed and on your system's <code>$PATH</code>.</p>
-</li>
+  <li>
+    <p><a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" 
+    target="_blank">Node Package Manager</a>, <code>npm</code>, installed and on your system's <code>$PATH</code>.</p>
+  </li>
+  <li>
+    <p>Node version 18 and above</p>
+  </li>
 </ul>
 :::
 
@@ -29,7 +32,7 @@ cd web5-app
 <p>Use NPM to install Web5:</p>
 
 ```bash
-npm install @tbd54566975/web5@0.6.0
+npm install @tbd54566975/web5@0.7.2
 ```
 
 :::note
@@ -41,7 +44,7 @@ This will create a `package.json` in the root of your project. Open `package.jso
 ```js
 {
   "dependencies": {
-    "@tbd54566975/web5": "^0.6.0"
+    "@tbd54566975/web5": "0.7.2"
   },
   "type": "module"
 }
