--- a/docs/web5/_quickstart-06-read-record.mdx
+++ b/docs/web5/_quickstart-06-read-record.mdx
@@ -1,9 +1,8 @@
 <section class="docs-section">
 
-### 5. Read DWN Records
+## 3. Read DWN Records
 
 If the user has given your app read permissions to their DWN, you can read their data by accessing it through the `record` property.
-
 
 To return the text data stored in the `record`, add the following to `index.js`:
 ```js
@@ -16,13 +15,13 @@ const readResult = await record.data.text();
 To see the record that was read from the DWN, add the following to <code>index.js</code>:
 
 ```js
-console.log('Read result: ', readResult);
+console.log('readResult', readResult)
 ```
 
 The output will resemble:
 
-```js
-Read result: Hello Web5
+```
+Hello Web5
 ```
 
 </p>
