--- a/docs/web5/_quickstart-10-next-steps.mdx
+++ b/docs/web5/_quickstart-10-next-steps.mdx
@@ -3,15 +3,12 @@
 ## Summary
 
 Congrats! You've just created a local DWN to serve as your user's
-personal data store. 
-
-Given a user's DID and appropriate permissions, your app can read, write, or delete data from the user's DWN, while
-leaving them in full control of their content. Other apps can query local storage to determine if the user already has a DWN on their device, and
-can also read and write from this same data store - essentially, making the user's data portable across multiple applications.
+personal data store. Given a user's DID and appropriate permissions, your app can read, write, or delete data from the user's DWN, while
+leaving them in full control of their content.
 
 :::info
 * [Download the completed index.js file](/files/index.txt)
-* [View source code for the interactive sandbox of this Quickstart](https://raw.githubusercontent.com/TBD54566975/web5-quickstart-widgets/0.6.0/index.html) 
+* [View source code for the interactive sandbox of this Quickstart](https://raw.githubusercontent.com/TBD54566975/web5-quickstart-widgets/0.7.0/index.html)
 * [Run interactive sandbox directly in your browser](https://moonlit-centaur-0d7b4f.netlify.app/)
 :::
 
