--- a/docs/web5/_quickstart-07-update-record.mdx
+++ b/docs/web5/_quickstart-07-update-record.mdx
@@ -1,6 +1,6 @@
 <section class="docs-section">
 
-### 6. Update DWN Records
+## 4. Update DWN Records
 
 To update the record, call `update` on the `record` object itself.
 
@@ -15,13 +15,12 @@ const updateResult = await record.update({data: "Hello, I'm updated!"});
 To see the record that was updated in the DWN, add the following to <code>index.js</code>:
 
 ```js
-console.log('Update result: ', await record.data.text());
+​console.log('updateResult', await record.data.text())
 ```
 
 The output will resemble:
-
 ```
-Update result: Hello, I'm updated!
+updateResult Hello, I'm updated!
 ```
 
 </p>
