--- a/src/pages/open-source/contributing.mdx
+++ b/src/pages/open-source/contributing.mdx
@@ -1,7 +1,7 @@
 import CommunitySection from '../../components/Community'
 
 # Welcome to Our Contributor Community!
-We're thrilled that you're interested in becoming a part of our thriving community. We believe in fostering an environment where everyone feels welcome and is able to contribute. To ensure the well-being of our community, we adhere to a [Code of Conduct](/open-source/code-of-conduct). Please take a moment to read it thoroughly before making any contributions.
+We're thrilled that you're interested in becoming a part of our thriving community. We believe in fostering an environment where everyone feels welcome and is able to contribute. To ensure the well-being of our community, we adhere to a [Code of Conduct](https://developer.tbd.website/open-source/incubation). Please take a moment to read it thoroughly before making any contributions.
 
 Before you begin working on an issue, please familiarize yourself with the project's contribution guidelines in their CONTRIBUTING.md. This will provide you with an understanding of the project's process.
 
@@ -13,7 +13,7 @@ There are numerous ways to contribute to TBD. Here are some suggestions to get s
 * **Contribute to the Codebase:** We welcome any and all contributors to help us push the web forward by building a decentralized ecosystem.
 * **Participate in Community Events:** We host a variety of community events on our Discord stage every month, ranging from Show & Tells to brainstorming sessions. Got an event idea or wish to host one? Post it in our [#community-events forum](https://discord.com/channels/937858703112155166/1101192919706255430). The DWN project also host office hours every Tuesday. All events will be posted in our events calendar in Discord.
 * **Write a Blog Post:** Are you passionate about writing? Share your expertise and insights with our community! We welcome your contributions to our blog section on the [TBD Developer website](https://developer.tbd.website/blog). Propose blog topics in our [#general channel](https://discord.com/channels/937858703112155166/937858703820980296) on Discord. We can't wait to read and share them with the community!
-* **Propose a New Project:** We believe in community-driven innovation. If you have an idea for a project that helps Web5, tbDEX, or the TBD open source ecosystem, we'd love to talk with you about our [Incubation Program](/open-source/incubation).  
+* **Propose a New Project:** We believe in community-driven innovation. If you have an idea for a project that helps Web5, tbDEX, or the TBD open source ecosystem, we'd love to talk with you about our [Incubation Program](https://developer.tbd.website/open-source/incubation).  
 * **Improve Documentation:** Good documentation is key to the success of any project. You can help improve the quality of our [existing docs](https://github.com/TBD54566975/developer.tbd.website/tree/main/docs) or add new pages.
 * **Showcase Your Work:** Working on a project or written a blog post recently? Share it with the community in our [#share-what-you-do channel](https://discord.com/channels/937858703112155166/1098207585661878402).
 * **Give Feedback:** We're always looking for ways to improve. If you have feedback on our website or docs, feel free to use our [feedback template](https://github.com/TBD54566975/developer.tbd.website/issues/new/choose).
