--- a/docs/web5/_quickstart-01-intro.mdx
+++ b/docs/web5/_quickstart-01-intro.mdx
@@ -1,7 +1,5 @@
 # Web5 in 5️⃣ minutes
 
-We’re going to build a decentralized application on the Web5 platform - in under 5 minutes.
-
-We’ll show you how to read, write, and delete from your users' personal data stores.
+We’re going to build a decentralized application on the Web5 platform - in under 5 minutes. You'll learn how to CRUD (create, read, update, and delete) data from your users' personal data stores.
 
 Let’s go! 🚀
