--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -1,4 +1,6 @@
-## 3. Associate DID with Storage
+<section class="docs-section">
+
+### 3. Associate DID with Storage
 
 When you instantiate Web5, the SDK internally creates a [Decentralized Web Node(DWN)](/docs/web5/learn/decentralized-web-nodes) to act as a personal data store to hold your user's content.
 
@@ -23,4 +25,6 @@ await web5.did.manager.set(did.id, {
 In production apps, before doing this step, you'd check to make sure the user doesn't already have an existing DWN. 
 :::
 
-Click "Run!" to store the user's DID (created in the previous step) in the sandbox DWN:
+#### Try it!
+
+</section>
