--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -1,4 +1,6 @@
-## 7. Delete DWN Records
+<section class="docs-section">
+
+### 7. Delete DWN Records
 
 Given permission from the user, your app can delete records from their DWN. Similar to reading, we’ll use the `record` object to remove the record.
 
@@ -25,4 +27,6 @@ Delete result: { code: 202, detail: 'Accepted' },
 </p>
 </details>
 
-Click "Run!" to delete the record that was stored in the sandbox DWN:
+#### Try it!
+
+</section>
