--- a/docs/web5/_quickstart-06-read-record.mdx
+++ b/docs/web5/_quickstart-06-read-record.mdx
@@ -1,4 +1,6 @@
-## 5. Read DWN Records
+<section class="docs-section">
+
+### 5. Read DWN Records
 
 If the user has given your app read permissions to their DWN, you can read their data by accessing it through the `record` property.
 
@@ -26,4 +28,6 @@ Read result: Hello Web5
 </p>
 </details>
 
-Click "Run!" to view the record stored in the sandbox DWN:
+#### Try it!
+
+</section>
