--- a/api/web5-js/dwn/dwn.mdx
+++ b/api/web5-js/dwn/dwn.mdx
@@ -1,7 +1,7 @@
 # dwn
 
 ## Overview
-The `dwn` class is responsible for providing convenience methods related to `dwn`s.
+The `dwn` class is responsible for providing convenience methods related to DWNs.
 
 ## Properties
 
