--- a/api/web5-js/dwn/records.mdx
+++ b/api/web5-js/dwn/records.mdx
@@ -47,15 +47,13 @@ Method for querying the DWN of a provided `target`.
 
 #### Parameters
 
-`target`
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The DID to query.
-
 `request`
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An object containing the following:
-- `author` - The DID of the author signing the query. This may be the same as the `target` parameter if the `target` and the signer of the query are the same entity, which is common for an app querying the DWN of its own user.
-- `message` - An object describing the properties of the DWN descriptor used to construct a valid DWN message.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; `from`: The DID to query from.
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; `author`: The DID of the author signing the query. This may be the same as the `target` parameter if the `target` and the signer of the query are the same entity, which is common for an app querying the DWN of its own user.
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; `message`: An object describing the properties of the DWN descriptor used to construct a valid DWN message.
 
 #### Returns
 
@@ -63,8 +61,8 @@ The response object of the query.
 
 #### Code Example
 ```js
-const response = await web5.dwn.records.query('did:example:bob', {
-  author: 'did:example:alice',
+const response = await web5.dwn.records.query({
+  from: 'did:example:alice',
   message: {
     filter: {
       schema: 'https://schema.org/Playlist',
@@ -74,16 +72,15 @@ const response = await web5.dwn.records.query('did:example:bob', {
 });
 ```
 
-### create(target, request)
+### create(request)
 
-Method for writing a record to the DWN of a provided `target`.
+Method for writing a record to the DWN of a specified DID.
 
 #### Parameters
 
-`target` - The DID to query.
+`request`
 
-`request` - An object containing the following:
-- `author` - The DID of the author signing the query. This may be the same as the `target` parameter if the `target` and the signer of the query are the same entity, which is common for an app querying the DWN of its own user.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  `from` - The DID of the author signing the query. This may be the same as the `target` parameter if the `target` and the signer of the query are the same entity, which is common for an app querying the DWN of its own user.
 - `message` - An object describing the properties of the DWN descriptor used to construct a valid DWN message.
 - `store` - A `boolean` specifying whether the `create` function should record the data in the user's DWN.
 - `data` - the data object of the bytes, stream, blob, or file to be sent.
@@ -94,32 +91,30 @@ The response object of the query.
 
 #### Code Example
 ```js
-const { record } = await web5.dwn.records.create('did:example:alice', {
-  author: 'did:example:alice',
-  data: 'Hello World!',
+const { record } = await web5.dwn.records.create({
+  data: 'Hello, world!',
   message: {
-    dataFormat: 'text/plain'
-  }
+    recipient: 'did:example:alice'
+    schema: 'message',
+    dataFormat: 'text/plain',
+    protocol: 'social-media',
+  },
 });
 ```
 
-### write(target, request)
+### write(request)
 
 Method for writing a record to the DWN of a provided `target`.
 
 #### Parameters
 
-`target`
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The DID to query.
-
 `request`
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; An object containing the following:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; `from`: The DID of the author signing the query. This may be the same as the `target` parameter if the `target` and the signer of the query are the same entity, which is common for an app querying the DWN of its own user.
 
-- `author` - The DID of the author signing the query. This may be the same as the `target` parameter if the `target` and the signer of the query are the same entity, which is common for an app querying the DWN of its own user.
-- `message` - An object describing the properties of the DWN descriptor used to construct a valid DWN message.
-- `data` - the data object of the bytes, stream, blob, or file to be sent.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; `message`: An object describing the properties of the DWN descriptor used to construct a valid DWN message.
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`data`: the data object of the bytes, stream, blob, or file to be sent.
 
 #### Returns
 
@@ -127,8 +122,8 @@ The response object of the query.
 
 #### Code Example
 ```js
-const { record } = await web5.dwn.records.write('did:example:alice', {
-  author: 'did:example:alice',
+const { record } = await web5.dwn.records.write({
+  from: 'did:example:alice',
   data: 'Hello again!',
   message: {
     recordId: record.recordId,
@@ -143,17 +138,11 @@ Method for reading a record to the DWN of a provided `target`.
 
 #### Parameters
 
-`target`
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The DID to query.
-
 `request`
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An object containing the following:
-
-- `author` - The DID of the author signing the query. This may be the same as the `target` parameter if the `target` and the signer of the query are the same entity, which is common for an app querying the DWN of its own user.
-- `message` - An object describing the properties of the DWN descriptor used to construct a valid DWN message.
-    - `recordId` - The `recordId` you are fetching.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`from`: The DID of the author signing the query. This may be the same as the `target` parameter if the `target` and the signer of the query are the same entity, which is common for an app querying the DWN of its own user.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`message`: An object describing the properties of the DWN descriptor used to construct a valid DWN message.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; `recordId`: The `recordId` you are fetching.
 
 #### Returns
 
@@ -161,8 +150,8 @@ The response object of the query.
 
 #### Code Example
 ```js
-const response = await web5.dwn.records.delete('did:example:alice', {
-  author: 'did:example:alice',
+const response = await web5.dwn.records.delete({
+  from: 'did:example:alice',
   message: {
     recordId: 'bfw35evr6e54c4cqa4c589h4cq3v7w4nc534c9w7h5'
   }
