--- a/src/pages/open-source.mdx
+++ b/src/pages/open-source.mdx
@@ -25,10 +25,12 @@ import Heading from '@site/src/content/open-source/heading.mdx';
 
 <Heading />
 
-<ButtonGroup buttons={content.buttons} />
-
 <Divider type="slash" />
 
 <PillarList title={content.title} pillars={content.pillars} />
+
+<Divider type="slash" />
+
+<ButtonGroup buttons={content.buttons} />
 
 </div>
